# kawai_ui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: ka_basic  ka_font  ka_time  mesh  shader  split.py  ui_colors  ui_component  ui_layout  ui_render  ui_window
include/event/: event  event_dispatch  event_keyboard  event_mouse  event_ui  event_window
shaders/: ui.frag  ui.vert  ui_borderrect.frag  ui_btn.frag  ui_radius.frag  ui_text.frag  ui_text.vert
src/: ka_font.cpp  mesh.cpp  shader.cpp  split.py  ui_component.cpp  ui_components.cpp  ui_layout.cpp  ui_render.cpp  ui_window.cpp
test/: layout_test.cpp  textbox_test.cpp  ui_test.cpp
